--- a/main.html
+++ b/main.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accessible Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <header>
+    <h1 role="heading">My Portfolio</h1>
+    <nav role="navigation">
+      <ul role="list">
+        <li role="listitem"><a href="#about">About Me</a></li>
+        <li role="listitem"><a href="#projects">Projects</a></li>
+        <li role="listitem"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <section id="about">
+      <h2 role="heading">About Me</h2>
+      <img src=".jpg" alt="A photo of me" role="img">
+      <p>I am a passionate web developer with a focus on accessibility and user experience.</p>
+    </section>
+
+    <section id="projects">
+      <h2 role="heading">Projects</h2>
+      <ul role="list">
+        <li role="listitem">Accessible Website Redesign</li>
+        <li role="listitem">Responsive Web Application</li>
+        <li role="listitem">Interactive Data Visualization</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2 role="heading">Contact</h2>
+      <p>If you'd like to get in touch, please email me at <a href="mailto:daksheshsharma21072000@gmail.com">daksheshsharma21072000@gmail.com</a>.</p>
+    </section>
+  </main>
 </body>
-
 </html>
